<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"Puy du Fou"</string>
    <string name="app_description">"L'application Puy du Fou vous permet de connaître l'ensemble des représentations et vous guider durant votre visite !"</string>


    <string name="title_activity_home">" - Acceuil"</string>
    <string name="title_activity_planning">"Planning"</string>
    <string name="title_activity_show">"Spectacles"</string>

    <string name="facebook_app_id">894155047310830</string>
    <string name="menu_planning">"> Votre planning"</string>
    <string name="menu_show">"> Spectacles du jour"</string>
    <string name="menu_restaurant">"> Restaurants du parc"</string>
    <string name="menu_shop">"> Boutiques du parc"</string>


    <string name="action_help">"Aide"</string>
    <string name="action_add">"Ajouter"</string>
    <string name="action_plan">"Planifier"</string>

    <string name="text_shareme_facebook"> Partagez moi sur Facebook ! </string>
    <string name="text_shareme_twitter"> Partagez moi sur Twitter ! </string>
    <string name="text_description">"<u>Description :</u> "</string>
    <string name="text_rateit">"Votez !"</string>
    <string name="text_addit">"Ajoutez !"</string>
    <string name="text_location">"<u>Emplacement :</u> "</string>
    <string name="text_actors">"<u>Artistes :</u> "</string>
    <string name="text_creationdate">"<u>Date de parution :</u> "</string>
    <string name="text_duration">"<u>Durée :</u> "</string>
    <string name="text_min_unit">" min"</string>

</resources>
