<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.exia.puydufou.CardFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
        <TextView android:id="@+id/shop_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/menu_text_size"
                />

        <RatingBar android:id="@+id/shop_rating"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:numStars="5"
                   android:stepSize="0.5"
                   android:isIndicator="true"
                />

        <ImageView android:id="@+id/shop_preview"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" />

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/shop_location_label"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:textSize="@dimen/description_text_size"

                      android:text="@string/text_location"/>

            <TextView android:id="@+id/shop_location"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/description_text_size"
                    />
        </LinearLayout>

        <TextView android:id="@+id/shop_description_label"
                  android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:textSize="@dimen/description_text_size"
                  android:text="@string/text_description"/>

        <TextView android:id="@+id/shop_description"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/description_text_size"
                />

        <Button android:id="@+id/shop_rateit"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="@dimen/description_text_size"
                android:text="@string/text_rateit"
                />

        <Button android:id="@+id/shop_shareme_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shareme_facebook"
            android:onClick="ShareMeOnFacebook"/>

        <Button android:id="@+id/shop_shareme_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_shareme_twitter"
            android:onClick="ShareMeOnTwitter"/>
    </LinearLayout>

</FrameLayout>
